--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
-
 .App {
   margin: 0px;
   padding: 0px;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
-  font-family: 'Ubuntu', sans-serif;
+  font-family:  sans-serif;
   height: 100vh;
   background-color: hsl(229, 24%, 87%);
   color: hsl(213, 96%, 18%);
